# ImageTagAnalyzer

backend/: pyproject.toml
backend/app/: analytics_router.py  images_router.py  main.py  models.py  redis_client.py  sample_images_router.py
backend/tests/: test_redis_client.py
frontend/: package-lock.json
frontend/src/: App.test.js  setupTests.js
frontend/src/components/: Analytics.jsx  TagCloud.jsx  TagCloud.perf.test.js
