[project]
name = "ImageTagAnaly"
version = "0.1.0"
description = ""
authors = [
    {name = "Kir Tarasov", email = "bravekirty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "alembic>=1.16.5,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "uvicorn>=0.35.0,<0.36.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "redis>=7.0.1,<8.0.0",
    "hiredis>=3.3.0,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "pillow>=12.0.0,<13.0.0",
    "aiohttp>=3.12.2,<4.0.0",
    "python-multipart>=0.0.20,<0.0.21"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
